2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_class_init):
	* gst/playback/gstdecodebin2.c: (gst_decode_bin_class_init):
	* gst/playback/gstplay-marshal.list:
	* gst/playback/gsturidecodebin.c: (gst_uri_decode_bin_class_init):
	Use correct marshallers. GstCaps are a boxed type and no GObject
	subclass.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstrtsp.def:
	Add gst_rtsp_connection_(set|clear)_auth_param() to the exported
	symbols.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* tests/check/elements/audioresample.c:
	(live_switch_alloc_only_48000), (live_switch_get_sink_caps),
	(live_switch_push), (GST_START_TEST):
	Add unit test for the latest basetransform negotiation changes.
	See bug #526768.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/ffmpegcolorspace/imgconvert.c: (nv12_to_nv21):
	Fix nv12<->nv21 conversion if stride is larger than width.

2008-05-13  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: j^ <j at oil21 dot org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_parse_skeleton_fishead),
	(gst_ogg_pad_parse_skeleton_fisbone):
	* ext/ogg/gstoggdemux.h:
	Parse presentation time from skeleton streams and use it as offset
	for the timestamps. Fixes bug #530068.

2008-05-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render), (gst_base_audio_sink_async_play):
	Revert previous patch that attempted to more accurately calculate the
	initial offset between master and slave clock. The best thing we can do
	in general is take the time of both clocks as the diff since we don't
	know when the actual preroll happened.

2008-05-11  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/pbutils/install-plugins.c:
	  Fix docs: type and missing word.

2008-05-10  Tim-Philipp Müller  <tim.muller at collabora co uk>
